PostGIS 3.5.4dev
xxxx/xx/xx
To take advantage of all postgis_sfcgal extension features SFCGAL 1.5+ is needed.
PostgreSQL 12-18 required. GEOS 3.8+ required. Proj 6.1+ required.

* Bug fixes *

- #5908, [topology] Fix crash in GetFaceContainingPoint (Sandro Santilli)


PostGIS 3.5.3
2025/05/17

To take advantage of all postgis_sfcgal extension features SFCGAL 1.5+ is needed.
PostgreSQL 12-18beta1 required. GEOS 3.8+ required. Proj 6.1+ required.

* Bug fixes *

- Do not complain about illegal option when calling shp2pgsql -?
  (Sandro Santilli, Giovanni Zezza)
- #5862, [topology] Prevent another topology corruption with
         TopoGeo_addPoint near almost collinear edges (Sandro Santilli)
- #5841, Change approach to interrupt handling to conform to PgSQL
         recommended practice (Paul Ramsey)
- #5855, Fix index binding in ST_DFullyWithin (Paul Ramsey)
- #5819, Support longer names in estimated extent (Paul Ramsey)
- Fix misassignment of result in _lwt_HealEdges (Maxim Korotkov)
- #5876, ST_AddPoint with empty argument adds garbage (Paul Ramsey)
- #5874, Line substring returns wrong answer (Paul Ramsey)
- #5829, geometry_columns with non-standard constraints (Paul Ramsey)
- #5818, [sfcgal] GT-244 Fix CG_IsSolid function (Loïc Bartoletti)
- #5885, Fix documentation about grid-based overlay operations (Sandro Santilli)
- For [sfcgal] SFCGAL 2.1.0+ prevent using deprecated functions (Regina Obe)

PostGIS 3.5.2
2025/01/18

To take advantage of all postgis_sfcgal extension features SFCGAL 1.5+ is needed.
PostgreSQL 12-17 required. GEOS 3.8+ required. Proj 6.1+ required.

* Bug fixes *

- #5677, Retain SRID during unary union (Paul Ramsey)
- #5833, pg_upgrade fix for postgis_sfcgal (Regina Obe)
- #5564, BRIN crash fix and support for parallel in PG17+
         (Paul Ramsey, Regina Obe)


PostGIS 3.5.1
2024/12/22

To take advantage of all postgis_sfcgal extension features SFCGAL 1.5+ is needed.
PostgreSQL 12-17 required. GEOS 3.8+ required. Proj 6.1+ required.
